--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/fromearth?useUnicode=true&serverTimezone=Asia/Seoul&useSSL=false
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/fromearth?useUnicode=true&serverTimezone=Asia/Seoul&useSSL=false
 
+spring.datasource.username=root
+spring.datasource.password=12345678
+
+#mybatis
+mybatis.mapper-locations=classpath:/mappers/*Mapper.xml
+mybatis.configuration.map-underscore-to-camel-case=true
